--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "multimediasorter"
-version = "2.0.0"
+version = "2.0.1"
 description = ""
 authors = []
-license = "GPL-3.0"
+license = "MIT"
 readme = "README.md"
 packages = [
     { include = "mediasorter", from = "src" },
